# numbernine

./: .editorconfig  .gitignore  .gitmodules  README.md  meson.build  shared_util.hpp
bindings/: handy.txt  lsh.txt  meson.build  polkit.txt  polkitagent.txt  upower.txt
bindings/handy/: ActionRow.d  Arrows.d  Column.d  ComboRow.d  Dialer.d  DialerButton.d  DialerCycleButton.d  Dialog.d  EnumValueObject.d  ExpanderRow.d  Handy.d  HeaderBar.d  HeaderGroup.d  Leaflet.d  PreferencesGroup.d  PreferencesPage.d  PreferencesRow.d  PreferencesWindow.d  SearchBar.d  Squeezer.d  TitleBar.d  ValueObject.d  ViewSwitcher.d  ViewSwitcherBar.d
bindings/handy/c/: functions.d  types.d
bindings/lsh/: LayerShell.d
bindings/lsh/c/: functions.d  types.d
bindings/polkit/: ActionDescription.d  Authority.d  AuthorizationResult.d  Details.d  IdentityIF.d  IdentityT.d  Permission.d  SubjectIF.d  SubjectT.d  SystemBusName.d  TemporaryAuthorization.d  UnixGroup.d  UnixNetgroup.d  UnixProcess.d  UnixSession.d  UnixUser.d
bindings/polkit/c/: functions.d  types.d
bindings/polkitagent/: Listener.d  Session.d  TextListener.d
bindings/polkitagent/c/: functions.d  types.d
bindings/upower/: Client.d  Device.d  HistoryItem.d  StatsItem.d  WakeupItem.d  Wakeups.d
bindings/upower/c/: functions.d  types.d
dbus/: meson.build  org.freedesktop.Notifications.xml  org.freedesktop.PolicyKit1.Authority.xml  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.xml  org.gtk.Actions.xml
gtk-lsh/: manager.cpp  manager.h  manager.hpp  meson.build  multimonitor.hpp  surface.cpp  surface.h  surface.hpp
gtk-util/: button_toggler.cpp  button_toggler.hpp  glade.hpp  icon.cpp  icon.hpp  list_box_reuser.hpp  meson.build
launcher/: app_list.hpp  icon.cpp  icon.hpp  launcher.glade  main.cpp  meson.build  r.gresource.xml  style.css
notification-daemon/: main.cpp  meson.build  notification.glade  r.gresource.xml  style.css
panel/: example.dconf  main.cpp  meson.build  panel.cpp  panel.h  panel.hpp  r.gresource.xml  style.css  technology.unrelenting.numbernine.panel.gschema.xml  widgets.h  widgets.hpp
panel/widgets/: battery.cpp  battery.hpp  clock.cpp  clock.hpp  quicklaunch.cpp  quicklaunch.h  quicklaunch.hpp  remoteaction.cpp  remoteaction.hpp  separator.cpp  separator.h  separator.hpp  widget.hpp
pk-agent/: agent.d  auth.glade  auth_dialog.cpp  auth_dialog.hpp  auth_requester.hpp  dialog.cpp  dialog.d  main.cpp  meson.build  polkit_agent.cpp  polkit_agent.hpp  r.gresource.xml  style.css
protocols/: WaylandGtkD.d  meson.build  weston-desktop-shell.xml  wl_protos.d  wl_protos_helper.c  wldip-capabilities.xml  wldip-compositor-manager.xml  wlr-layer-shell-unstable-v1.xml
schemas/: Management.fbs  PkAgent.fbs  meson.build
settings/: KeyboardLayout.d  app.cpp  daemon.cpp  dialogs.glade  main.cpp  meson.build  r.gresource.xml  settings.d  settings.glade  style.css  technology.unrelenting.numbernine.settings.gschema.xml  util.hpp  xkb.cpp  xkb.hpp
shell/: Fuzzy.d  Global.d  NotificationServer.d  Panel.d  PanelManager.d  PanelPopover.d  Wallpaper.d  Wallpaper_render.cpp  WindowManager.d  meson.build  r.gresource.xml  shell.d  style.css  technology.unrelenting.numbernine.Shell.gschema.xml
shell/applets/: Applet.d  Clock.d  Dock.d  Launcher.d  Launcher.glade  Notifier.d  NotifierNotification.glade  Power.d  Spacer.d
shell/launcher_plugins/: Apps.d  Calculator.d  Calculator_helper.cpp  Plugin.d
supervisor/: main.cpp  meson.build  supervisor-freebsd.cpp  supervisor.hpp
util/: DBus.d  Glade.d  Glade.di  InputInhibitor.c  MultiMonitor.d  Vals.d  Vals.di  meson.build
wallpaper/: main.cpp  meson.build  technology.unrelenting.numbernine.wallpaper.gschema.xml  wpimage.cpp  wpimage.hpp
wf-plugins/: gsettings.cpp  magic-mirror.cpp  magic-mirror.xml  meson.build  mod2key.cpp  mod2key.xml
